syntax = "proto3";

package football;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message ClubRequest {
    int32 id = 1;
}

message ClubResponse {
    string name = 1;
    int32 id = 2;
    int32 league_id = 3;
}

message LiveTickerRequest {
    string client_name = 1;
}

message LiveTickerResponse {
    google.protobuf.Timestamp update_time = 1;
}

message ClubList {
    repeated ClubResponse clubs = 1;
}

service FootballService {
    rpc GetClubs(google.protobuf.Empty) returns (ClubList);
    rpc GetClub(ClubRequest) returns (ClubResponse);
    rpc GeLiveData(LiveTickerRequest) returns (stream LiveTickerResponse);
}